compiler/fir/analysis-tests/testData/resolve/contextParameters/diagnostics/contextParameterSyntaxWithReceiversLanguageFeature.kt
// RUN_PIPELINE_TILL: FRONTEND
// LANGUAGE: +ContextReceivers

context(<!UNSUPPORTED_FEATURE!>s: String<!>)
fun foo() {}

fun bar(
    x: List<<!CONTEXT_RECEIVERS_DEPRECATED!>context<!>(String) () -> Unit>
) {}